--- a/covidImmuneSCRNA/covid_demo.ipynb
+++ b/covidImmuneSCRNA/covid_demo.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#scanpy is used for IR profiling\n",
     "import scanpy as sc"
    ]
   },
@@ -513,6 +514,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "982ecf95",
    "metadata": {},
@@ -587,6 +589,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "68bb2fdb",
    "metadata": {},
@@ -661,6 +664,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0fdab6fe",
    "metadata": {},
@@ -709,6 +713,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ff4eec88",
    "metadata": {},
@@ -789,6 +794,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "17baaabb",
    "metadata": {},
@@ -838,6 +844,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8754ea0f",
    "metadata": {},
@@ -901,6 +908,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "053e46ea",
    "metadata": {},
@@ -920,6 +928,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5704104e",
    "metadata": {},
@@ -928,6 +937,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9df2aefe",
    "metadata": {},
@@ -949,6 +959,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7488c6e5",
    "metadata": {},
@@ -957,6 +968,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1efaeab1",
    "metadata": {},
@@ -976,6 +988,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90df145d",
    "metadata": {},
@@ -984,6 +997,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b9e4d527",
    "metadata": {},
@@ -1006,6 +1020,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6ee32761",
    "metadata": {},
@@ -1058,6 +1073,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a12bea62",
    "metadata": {},
@@ -1141,6 +1157,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e956eb28",
    "metadata": {},
@@ -1367,6 +1384,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb663bcb",
    "metadata": {},
@@ -1425,6 +1443,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c4b8d143",
    "metadata": {},
@@ -1443,6 +1462,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "43fe907a",
    "metadata": {},
@@ -1924,6 +1944,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "013cf309",
    "metadata": {},
