--- a/covidImmuneSCRNA/covid_demo.ipynb
+++ b/covidImmuneSCRNA/covid_demo.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "#scanpy is used for IR profiling\n",
+    "# testing\n",
     "import scanpy as sc"
    ]
   },
